<resources>
    <string name="app_name">ProyectoRepasoFinal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- ACTIVITY 1 -->
    <string name="txtAct1">Que desea hacer?</string>
    <string name="btn_datos">Datos</string>
    <string name="btn_listview">ListView</string>
    <string name="btn_spinner">Spinner</string>
    <string name="btn_notificacion">Notificacion</string>
    <string name="btn_lvPersonalizado">ListView Mod</string>
    <string name="btn_spPersonalizado">Spinner Mod</string>
    <string name="title_activity_activity_datos">ActivityDatos</string>

    <!-- ACTIVITY 2 -->
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="dni">DNI:</string>
    <string name="carnet">Carnet:</string>
    <string name="sexo">Sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="valoracion">Valora esta app:</string>
    <string name="edad">Edad:</string>
    <string name="guardar">Guardar</string>
    <string name="restaurar">Restaurar</string>
    <string name="title_activity_activity_info">ActivityInfo</string>

    <!-- ACTIVITY INFO -->
    <string name="btnContinuar">Continuar</string>
    <string name="texto">Son correctos sus datos?</string>
    <string name="title_activity_spinner">Spinner</string>

    <!-- ACTIVITY SPINNER -->
    <string name="infoSpLocal">El siguiente SPINNER carga datos a través de un ArrayAdapter normal y de formal local mediante un ArrayList como atributo local de la clase</string>
    <string name="infoSpDinamico">El siguiente SPINNER carga datos a través del xml "arrays" generado como recurso</string>
    <string name="infoTypedArray">Los siguientes spinners son dinámicos y cargan datos masivos de un xml a traves de un typedArray </string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_spinner_mod">SpinnerModAct</string>
    <string name="title_activity_notificacion">Notificacion</string>

    <!-- ACTIVITY NOTIFICACION -->
    <string name="btnNotificacion">Abrir notificación</string>

</resources>
