<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activity1"
    android:id="@+id/RelativeLayout_Act1"
    android:background="#ff395275">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_Act1"
        android:textColor="#ffffffff"
        android:text="@string/txtAct1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnDatos"
        android:onClick="accionBtnDatos"
        android:layout_marginTop="47dp"
        android:text="@string/btn_datos"
        android:layout_below="@+id/tv_Act1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnSpinner"
        android:onClick="accionBtnSpinner"
        android:text="@string/btn_spinner"
        android:layout_below="@+id/btnNotificacion"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnNotificacion" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnNotificacion"
        android:onClick="accionBtnNotificacion"
        android:layout_below="@+id/btnDatos"
        android:layout_alignParentStart="true"
        android:text="@string/btn_notificacion"
        android:layout_alignEnd="@+id/btnDatos" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnLvMod"
        android:onClick="accionBtnLvMod"
        android:text="@string/btn_lvPersonalizado"
        android:layout_below="@+id/btnSpinner"
        android:layout_alignEnd="@+id/btnSpinner"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnSpMod"
        android:onClick="accionBtnSpMod"
        android:text="@string/btn_spPersonalizado"
        android:layout_below="@+id/btnLvMod"
        android:layout_alignEnd="@+id/btnLvMod"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/btnListView"
        android:onClick="accionBtnListView"
        android:text="@string/btn_listview"
        android:layout_below="@+id/btnSpMod"
        android:layout_alignEnd="@+id/btnSpMod"
        android:layout_alignParentStart="true" />

</RelativeLayout>
