<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.estruch18.proyectorepasofinal.ActivityDatos"
    android:background="#ff395275"
    android:id="@+id/RelativeLayout_ActDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvNombre"
        android:textColor="#ffffffff"
        android:text="@string/nombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvApellidos"
        android:textColor="#ffffffff"
        android:text="@string/apellidos"
        android:layout_below="@+id/tvNombre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvDni"
        android:textColor="#ffffffff"
        android:text="@string/dni"
        android:layout_below="@+id/tvApellidos"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombre"
        android:layout_above="@+id/tvApellidos"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etApellidos"
        android:layout_below="@+id/etNombre"
        android:layout_alignStart="@+id/etNombre"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etDni"
        android:layout_below="@+id/etApellidos"
        android:layout_alignEnd="@+id/etApellidos"
        android:textColor="#ffffffff" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swCarnet"
        android:layout_below="@+id/etDni"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textColor="#ffffffff"
        android:text="@string/carnet"
        android:layout_marginTop="17dp"
        android:textSize="18dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbValoracion"
        android:layout_marginBottom="108dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvValoracion"
        android:textColor="#ffffffff"
        android:text="@string/valoracion"
        android:layout_above="@+id/rbValoracion"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/swCarnet"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tvValoracion"
        android:id="@+id/rgSexo"
        android:weightSum="1"
        android:layout_marginTop="5dp"
        android:background="@mipmap/ic_launcher">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvSexo"
            android:textColor="#ffffffff"
            android:text="@string/sexo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:id="@+id/rbHombre"
            android:checked="true"
            android:textSize="18dp"
            android:textColor="#ffffffff"
            android:layout_marginTop="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:id="@+id/rbMujer"
            android:checked="false"
            android:textSize="18dp"
            android:textColor="#ffffffff" />
    </RadioGroup>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skEdad"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:layout_alignEnd="@+id/rbValoracion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvEdad"
        android:textColor="#ffffffff"
        android:text="@string/edad"
        android:layout_above="@+id/skEdad"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurar"
        android:id="@+id/btnRestaurar"
        android:onClick="accionBtnRestaurar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/btnGuardar"
        android:onClick="accionBtnGuardar"
        android:layout_alignTop="@+id/btnRestaurar"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvEdadInfo"
        android:layout_above="@+id/btnGuardar"
        android:layout_toEndOf="@+id/skEdad"
        android:textSize="18dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvCarnetInfo"
        android:textSize="18dp"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/swCarnet"
        android:layout_alignEnd="@+id/tvEdadInfo" />

</RelativeLayout>
