<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.estruch18.proyectorepasofinal.Spinner"
    android:background="#ff395275"
    android:id="@+id/RelativeLayout_ActSpinner">

    <Spinner
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:id="@+id/sp_ProvinciasLocal"
        android:layout_below="@+id/tv_infoSpLocal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_infoSpLocal"
        android:text="@string/infoSpLocal"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:id="@+id/spProvinciasDinamico"
        android:layout_below="@+id/tv_infoSpDinamico"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_infoSpDinamico"
        android:text="@string/infoSpDinamico"
        android:textColor="#ffffffff"
        android:layout_below="@+id/sp_ProvinciasLocal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Spinner
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:id="@+id/spProvincias"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp" />

    <Spinner
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:id="@+id/spPueblos"
        android:layout_alignTop="@+id/spProvincias"
        android:layout_toEndOf="@+id/spProvincias"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_typedArray"
        android:text="@string/infoTypedArray"
        android:textColor="#ffffffff"
        android:layout_below="@+id/spProvinciasDinamico"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
